--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
-    <script src="static/jquery-3.3.1.js"></script>
+    <script src="../static/jquery-3.3.1.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
