修改Popover的样式, js也调整为Highlight-Awesome的样子

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,12 @@
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, ducimus voluptate! Ad aspernatur at aut corporis culpa eius error esse ex explicabo fugit inventore ipsum itaque labore laboriosam magni nobis nulla obcaecati odio officiis porro quae quaerat quas, quia repellendus reprehenderit rerum sequi sunt suscipit vel voluptas. Accusantium amet architecto at beatae commodi consequuntur dignissimos dolore eos fugiat, illo in ipsum labore libero minus molestiae neque nulla obcaecati optio pariatur porro quaerat, quam qui recusandae sequi soluta vel vitae voluptas. Dolores eius fuga ipsa molestiae odit possimus, praesentium quaerat quidem sunt totam, vel voluptatem! Consequatur hic libero maiores quasi tenetur!</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, ducimus voluptate! Ad aspernatur at aut corporis culpa eius error esse ex explicabo fugit inventore ipsum itaque labore laboriosam magni nobis nulla obcaecati odio officiis porro quae quaerat quas, quia repellendus reprehenderit rerum sequi sunt suscipit vel voluptas. Accusantium amet architecto at beatae commodi consequuntur dignissimos dolore eos fugiat, illo in ipsum labore libero minus molestiae neque nulla obcaecati optio pariatur porro quaerat, quam qui recusandae sequi soluta vel vitae voluptas. Dolores eius fuga ipsa molestiae odit possimus, praesentium quaerat quidem sunt totam, vel voluptatem! Consequatur hic libero maiores quasi tenetur!</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, ducimus voluptate! Ad aspernatur</p>
+
+<ul>
+    <li>hello world</li>
+    <li>foo bar</li>
+</ul>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, ducimus voluptate! Ad aspernatur at aut corporis culpa eius error esse ex explicabo fugit inventore ipsum itaque labore laboriosam magni nobis nulla obcaecati odio officiis porro quae quaerat quas, quia repellendus reprehenderit rerum sequi sunt suscipit vel voluptas. Accusantium amet architecto at beatae commodi consequuntur dignissimos dolore eos fugiat, illo in ipsum labore libero minus molestiae neque nulla obcaecati optio pariatur porro quaerat, quam qui recusandae sequi soluta vel vitae voluptas. Dolores eius fuga ipsa molestiae odit possimus, praesentium quaerat quidem sunt totam, vel voluptatem! Consequatur hic libero maiores quasi tenetur!</p>
 
